[package]
name = "yewdux-middleware"
version = "0.3.0"
edition = "2021"
categories = ["yewdux", "yew", "ui"]
keywords = ["yewdux", "yew", "ui"]
description = "A Redux-like middleware for Yewdux."
repository = "https://github.com/ivmarkov/yewdux-middleware"
license = "MIT OR Apache-2.0"
readme = "README.md"
#forced-target = "wasm32-unknown-unknown"

[dependencies]
yewdux = { version = "0.10", default-features = false }
yew = { version = "0.21", default-features = false }
anymap = "1.0.0-beta.2"
